employee names and emails populated into views

--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,3 +1,2 @@
-<h4><%= @employee.first_name %></h4>
-<h4><%= @employee.last_name %></h4>
-<h4><%= @employee.email %></h4>
+<h4>Employee Name: <%= @employee.first_name %> <%= @employee.last_name %></h4>
+<h4>Primary e-mail: <%= @employee.email %></h4>
